more plots added
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9848 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -70,6 +70,8 @@ elastic scattering \sep total cross-section \sep LHC \sep TOTEM
 
 \input differential_cross_section
 
+\input results
+
 %--------------------------------------------------
 
 \section{Conclusions and Outlook}
