--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -1,7 +1,42 @@
 \section{Data Taking}
 
-The presented measurement is based on data taken in July 2012, during the LHC fill number 2836 providing protons colliding at the centre-of-mass energy $\sqrt s = 8\un{TeV}$. The vertical RPs were inserted at a distance of $9.5$ times the transverse beam size, $\sigma_{\rm beam}$. Initially two, later three colliding bunch-pairs were used, with a typical population of $8\cdot10^{10}$ protons, yielding an instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The main trigger required a coincidence between the RPs in both arms, but combining the near and far units of a station in \textit{OR} to ensure maximal efficiency. During the about $11\un{h}$ long data-taking, a luminosity of $735\un{\mu b^{-1}}$ was accumulated, giving $7.2\cdot 10^6$ tagged elastic events.
-
-A special $\beta^* = 90\un{m}$ optics was used, with essentially the same characteristics as at $\sqrt s = 7\un{TeV}$ \cite{epl96}: low beam divergence, parallel-to-point focussing and large effective length ($L_y \approx 270\un{m}$) in the vertical plane, and almost vanishing effective length $L_x$ in the horizontal plane to simplify the separation of elastic and diffractive events.
+The presented measurement is based on data taken in July 2012, during the LHC fill number 2836 providing protons colliding at the centre-of-mass energy $\sqrt s = 8\un{TeV}$. The vertical RPs were inserted at a distance of $9.5$ times the transverse beam size, $\sigma_{\rm beam}$. Initially two, later three colliding bunch-pairs were used, with a typical population of $8\cdot10^{10}$ protons, yielding an instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The main trigger required a coincidence between the RPs in both arms, combining the near and far units of a station in \textit{OR} to ensure maximal efficiency. During the about $11\un{h}$ long data-taking, a luminosity of $735\un{\mu b^{-1}}$ was accumulated, giving $7.2\cdot 10^6$ tagged elastic events.
 
 %minimal $|t| = 0.027\un{GeV^2}$ % left edge of left most bin
+
+
+\section{Beam Optics}
+
+The beam optics relates the proton state at the IP to its state at the RP location. At the IP, the direction of a proton can be described by the scattering angle $\theta^*$ (with respect to the $z$ axis) and azimuthal angle $\phi^*$ (about the $z$ axis). Alternatively, the horizontal ($x$) and vertical ($y$) projections of the scattering angle can be used:
+\begin{equation}
+\label{eq:scatt angle}
+\theta_x^* = \theta^* \cos\phi^*\ , \theta_y^* = \theta^* \sin\phi^*\ .
+\end{equation}
+A proton with such scattering angles, emerging in IP vertex at $x^*$, $y^*$ with relative momentum loss $\xi \equiv \Delta p / p$ arrives at the RPs with transverse position
+\begin{equation}
+\label{eq:prot trans}
+	\begin{aligned}
+		x &= L_x\, \theta_x^* + v_x\, x^* + D_x\, \xi\ , \\
+		y &= L_y\, \theta_y^* + v_y\, y^* + D_y\, \xi\ ,
+	\end{aligned}
+\end{equation}
+given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions, the dispersion terms are irrelevant for this process.
+
+For the reported measurement, a special $\beta^* = 90\un{m}$ optics was used, with essentially the same characteristics as at $\sqrt s = 7\un{TeV}$ \cite{epl96}, see Table~\ref{tab:optics} for details. In the vertical plane, it features parallel-to-point focussing ($v_y \approx 0$) and large effective length $L_y$. In the horizontal plane, the almost vanishing effective length $L_x$ simplifies the separation of elastic and diffractive events: any sizeable horizontal displacement must be due to a momentum loss $\xi$.
+
+\begin{table}
+\caption{
+Optical functions for elastic proton transport. The values refer to the right arm, for the left one they are very similar.
+% (after optics matching)
+}
+\label{tab:optics}
+\begin{center}
+\vskip-3mm
+\begin{tabular}{ccccc}\hline\hline
+unit & $L_x$ & $v_x$ & $L_y$ & $v_y$ \cr\hline
+near & $2.45\un{m}$  & $-2.17$ & $239\un{m}$ & $0.040$ \cr
+far  & $-0.37\un{m}$ & $-1.87$ & $264\un{m}$ & $0.021$ \cr
+\hline\hline
+\end{tabular}
+\end{center}
+\end{table}
