--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -4,8 +4,7 @@
 The analysis method is similar to the previously published ones~\cite{epl101-el,prl111}, each diagonal is analysed
 separately. However, a different normalisation
 approach is used (Section~\ref{sec:normalisation}), making all 
-$t$-independent scaling factors (e.g.~certain inefficiency corrections)
-irrelevant.
+$t$-independent scaling factors irrelevant.
 
 
 
@@ -22,7 +21,7 @@ alignment (see Section~\ref{sec:alignment}), using the LHC optics
 \subsubsection{Kinematics Determination}
 \label{sec:kinematics}
 
-The horizontal ($\theta_x^*$) and vertical ($\theta_y^*$) projections of the scattering angle and the horizontal vertex position $x^*$ are first reconstructed separately from each arm, using formulae that optimise the robustness against imperfections (predominantly optics):
+The scattering angles and vertex position are first determined for each proton (i.e.~from each arm) separately by inverting the proton transport Eq.~(\ref{eq:prot trans}). The following formulae optimise the robustness against optics imperfections:
 \begin{equation}
 \label{eq:kin 1a}
 	\begin{aligned}
@@ -31,7 +30,9 @@ The horizontal ($\theta_x^*$) and vertical ($\theta_y^*$) projections of the sca
 		x^* &= {L_x^{\rm N} x^{\rm F} - L_x^{\rm F} x^{\rm N}\over L_x^{\rm N} v_x^{\rm F} - L_x^{\rm F} v_x^{\rm N}}\ , \\
 	\end{aligned}
 \end{equation}
-where the N and F superscripts refer to the near and far units, $x$ and $y$ to horizontal and vertical track hits and $v$ and $L$ stand for the magnification and effective length optical functions. This one-arm reconstruction is used for tagging elastic events, where the left and right arm protons are compared. Once an event is selected, the information from both arms can be merged yielding better angular resolution:
+where the N and F superscripts refer to the near and far units, $x$ and $y$ to horizontal and vertical track hits and $v$ and $L$ stand for the magnification and effective length optical functions. This one-arm reconstruction is used for tagging elastic events, where the left and right arm protons are compared.
+
+Once an event is selected, the information from both arms can be merged yielding better angular resolution:
 \begin{equation}
 \label{eq:kin 2a}
 \theta_x^* = {\theta_x^{*\rm L} + \theta_x^{*\rm R} \over 2}\ ,\quad \theta_y^* = {\theta_y^{*\rm L} + \theta_y^{*\rm R} \over 2}\ ,
@@ -51,7 +52,7 @@ where $p$ denotes the beam momentum.
 \subsubsection{Alignment}
 \label{sec:alignment}
 
-The standard three-step procedure \cite{totem-ijmp} has been applied: beam-based alignment prior to the run (as for LHC collimators) followed by two off-line methods: track-based alignment (for relative positions among RPs) and alignment with elastic events (for absolute position with respect to the beam). The final uncertainties per unit (common for top and bottom RPs) are: $2\un{\mu m}$ (horizontal shift), $100\un{\mu m}$ (vertical shift) and $0.2\un{mrad}$ (rotation about the beam axis). Propagated to the scattering angles, Eq.~(\ref{eq:kin 2a}), the shifts lead to uncertainties of $0.8\un{\mu rad}$ (horizontal) and $0.2\un{\mu rad}$ (vertical). The error of the RP rotations would bias the reconstructed $\theta_x^*$ by a term proportional to $\theta_y^*$, with the proportionality constant having a standard deviation of $0.02$.
+The standard three-step procedure \cite{totem-ijmp} has been applied: beam-based alignment prior to the run (as for LHC collimators) followed by two off-line methods: track-based alignment (for relative positions among RPs) and alignment with elastic events (for absolute position with respect to the beam). The final uncertainties per unit (common for top and bottom RPs) are: $2\un{\mu m}$ (horizontal shift), $100\un{\mu m}$ (vertical shift) and $0.2\un{mrad}$ (rotation about the beam axis). Propagated to the scattering angles, Eq.~(\ref{eq:kin 2a}), the shifts lead to uncertainties of $0.8\un{\mu rad}$ (horizontal) and $0.2\un{\mu rad}$ (vertical). The error of the RP rotations would bias the reconstructed $\theta_x^*$ by a term proportional to $\theta_y^*$, with the proportionality constant having a standard deviation of $0.02$. \todo{effect of such bias}
 
 
 %------------------------------
@@ -78,18 +79,44 @@ For the two-arm reconstruction, Eq.~(\ref{eq:kin 2a}), the factors have uncertai
 
 Statistical fluctuations in the reconstructed scattering angles are caused by 
 the beam divergence and, in the horizontal projection (due to small $L_x$), 
-also by the sensor resolution (strip pitch). Good descriptions of these effects
+also by the sensor resolution. Good descriptions of these effects
 are essential for several corrections discussed below.
 
-The angular resolution is studied through differences $\theta_{x,y}^{*R} - \theta_{x,y}^{*L}$. Since in good approximation the fluctuations are independent in each arm, the distribution of the difference is just twice wider than the fluctuation of angles in Eq.~(\ref{eq:kin 2a}). Generally, the distributions are well Gaussian, the small non-Gaussianity is decreasing with time. The resolutions were found to deteriorate with time: for the two-arm $\theta_y^*$ it evolved from initially $1.6$ to $1.7\un{\mu rad}$ at the end of the run. For $\theta_x^*$, the resolution decreased from $4.6$ to $4.8\un{\mu rad}$ (for the diagonal 45 bottom -- 56 top) and from $4.3$ to $4.4$ (45 top -- 56 bottom).
+The angular resolution is studied through differences $\theta_{x,y}^{*R} - \theta_{x,y}^{*L}$. Since in good approximation the fluctuations are independent in each arm, the distribution of the difference is just twice wider than the fluctuation of angles in Eq.~(\ref{eq:kin 2a}). Generally, the distributions are well Gaussian, the small non-Gaussianity is decreasing with time. The resolutions were found to deteriorate with time: for the two-arm $\theta_y^*$ it evolved from initially $1.6$ to $1.7\un{\mu rad}$ at the end of the run. For $\theta_x^*$, the resolution decreased from $4.6$ to $4.8\un{\mu rad}$ (for the diagonal 45 bottom -- 56 top) and from $4.3$ to $4.4\un{\mu rad}$ (45 top -- 56 bottom).
 
-Measurements of beam emittances show that the vertical beam divergences of the two beams are equal with a tolerance of about $15\un{\%}$. Exploiting this equality, one can de-convolute the distribution of $\theta_y^{*R} - \theta_y^{*L}$ in order to obtain the beam-divergence distribution, used e.g.~for acceptance corrections (see Section~\ref{sec:acc corr}).
+Measurements of beam emittances \todo{citation ??} show that the vertical beam divergences of the two beams are equal with a tolerance of about $15\un{\%}$. Exploiting this equality, one can de-convolute the distribution of $\theta_y^{*R} - \theta_y^{*L}$ in order to obtain the beam-divergence distribution, used e.g.~for acceptance corrections (see Section~\ref{sec:acc corr}).
+
+\todo{standard emittance growth ??}
 
 
 \iffalse
 The resolution in $\theta_y^*$ decreased from $1.6$ to $1.7\un{\mu rad}$ from the beginning to the end of the fill (DS3+DS4), for $\theta_x^*$ from $4.6$ to $4.8\un{\mu rad}$ (45b -- 56t) and from $4.3$ to $4.4\un{\mu rad}$ (45t -- 56b). In fact, just means over all bunches -- in analysis bunches treated independently. Comparing x and y, the contribution from the RP spatial resolution is evident. A cross check, horizontal beam div. from vertex distribution (sigma 145 to 185 urad, diagonal independent) % 2.3 to 2.9 urad
 , the sensor contribution (2-arm) is $4.3$ (45b) and $4.0$ urad (45t), time independent. With the same method, not only RMS, but also shape. Generally, gaussian-like, with non-gaussianity decreasing with time. Non-gaussianinty taken accounted in systematic uncertainties. The original assumption of identical resolutions in both arms can be verified by checking the beam emittances. They give beam divergences compatible with our observations and indicate that a possible left-right imbalance could be of order $15\un{\%}$, which is used for uncertainty estimation.
 \fi
+
+\begin{figure}
+\begin{center}
+\includegraphics{fig/resolutions_vs_time.pdf}
+\vskip-4mm
+\caption{%
+\todo{caption}. Double-arm angular resolution as a function of time (from the beginning of the first data-taking day). The step in $\theta_y^*$ resolution around $26.5\un{h}$ is due to inclusion of another bunch with a larger vertical emittance.
+}
+\label{fig:resolutions}
+\end{center}
+\end{figure}
+
+
+\begin{figure}
+\begin{center}
+\includegraphics{fig/beam_divergence_fits.pdf}
+\vskip-4mm
+\caption{%
+\todo{caption}. Diagonal 45 bottom - 56 top. Red: data between $20$ and $21\un{h}$. Blue: data between $30$ and $31\un{h}$, scaled by $0.1$. The solid lines represent single-Gaussian fits.
+}
+\label{fig:beam divergence}
+\end{center}
+\end{figure}
+
 
 %----------------------------------------------------------------------------------------------------
 
@@ -111,12 +138,16 @@ ${\cal U}$ for unfolding of resolution effects, ${\cal B}$ for background subtra
 \subsubsection{Event Tagging}
 \label{sec:tagging}
 
-The cuts used to select elastic events are summarised in Table \ref{tab:cuts}, all are applied at the $4\sigma$ level. Cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. Cuts 3 and 4 control the elasticity -- if a proton loses momentum, the vertical position-angle correlation at the RPs is lost. Cut 5 ensures that the two protons come from the same vertex (horizontally). 
+The cuts used to select elastic events are summarised in Table \ref{tab:cuts}. Cuts 1 and 2 require the reconstructed-track collinearity between the left and right arm. Cuts 3 and 4 control the elasticity -- if a proton loses momentum, the vertical position-angle correlation at the RPs is lost. Cut 5 ensures that the two protons come from the same vertex (horizontally). The correlation plots corresponding to these cuts are shown in Figure~\ref{fig:cuts}.
 
-The tagging efficiency is studied by applying the cuts also at the $5\un{\sigma}$ level. This selection yields about $0.5\un{\%}$ more events in every $t$ bin -- thus the inefficiency is irrelevant for the presented analysis.
+Monte-Carlo simulation suggests that applying all the five cuts at $3\un{\sigma}$ level would lead to a loss of about $2\un{\%}$ of elastic events. Setting the thresholds to $4\un{\sigma}$ yields a tolerable loss of about $0.07\un{\%}$ and therefore the cuts are applied at the $4\un{\sigma}$ level.
+% 2sigma: 76%, 3sigma: 98.02%, 4sigma: 99.93%, 5sigma: 99.999%
+
+The tagging efficiency is studied experimentally by applying the cuts also at the $5\un{\sigma}$ level. This selection yields about $0.5\un{\%}$ more events in every $t$ bin -- thus the inefficiency is irrelevant for the presented analysis.
+
 
 \begin{table}
-\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, N and F correspond to the near and far units, respectively. The constant $\alpha = L_y^{\rm F} / L_y^{\rm N} - 1 \approx 0.107$. The right-most column gives a typical RMS of the cut distribution.
+\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, N and F correspond to the near and far units, respectively. The constant $\alpha = L_y^{\rm F} / L_y^{\rm N} - 1 \approx 0.11$. The right-most column gives a typical RMS of the cut distribution.
 }
 \label{tab:cuts}
 \begin{center}
@@ -132,20 +163,45 @@ number & cut & RMS ($\equiv 1\sigma$)\cr\hline
 \end{center}
 \end{table}
 
+\begin{figure*}
+\begin{center}
+\includegraphics{fig/cuts.pdf}
+\caption{%
+Correlation plots for the selection cuts summarised in Table~\ref{tab:cuts}, using all events with diagonal topology 45 top -- 56 bottom. The black solid lines delimit the signal ($\pm 4\un{\sigma}$) region.
+}
+\label{fig:cuts}
+\end{center}
+\end{figure*}
+
+
 %------------------------------
 
 \subsubsection{Background}
 \label{sec:background}
 
-Studying distributions of discriminators from Table~\ref{tab:cuts} under various cut combinations allows for separation of signal and background contributions. While the central part (signal, within $4\un{\sigma}$) remains essentially constant, the tails (background) are dramatically affected. Interpolating the background smoothly into the signal region yields a background estimate of $1 - {\cal B} < 10^{-4}$ (independent of whether discriminator 1, 2 or 5 is used).
+Figure~\ref{fig:background} shows distributions of several discriminators from Table~\ref{tab:cuts} under various cut combinations. While the central part (signal) remains essentially constant, the tails (background) are strongly suppressed with increasing number of cuts applied. Interpolating the background smoothly into the signal region (see the dotted lines in the figure) yields a background estimate of $1 - {\cal B} < 10^{-4}$, independent of whether discriminator 1, 2 or 5 is used.
 % anyway irrelevant due to the normalisation approach
+
+\todo{what could the background be}
+
+
+\begin{figure}
+\begin{center}
+\includegraphics{fig/cut_distributions.pdf}
+\caption{%
+\todo{just an example}
+Right-left differences of the reconstructed scattering angles ($\theta_x^*$, $\theta_y^*$) and horizontal vertex position ($x^*$) under various combinations of the selection cuts, using all events with diagonal topology 45 top -- 56 bottom. The cut numbers in the legend correspond to Table~\ref{tab:cuts}. The vertical dashed lines represent the boundaries of the signal region ($\pm 4\un{\sigma}$ of the central peak). The dotted lines give a smooth interpolation (Gaussian fit) of the background observed in the distribution tails.
+}
+\label{fig:background}
+\end{center}
+\end{figure}
 
 %-------------------------
 
 \subsubsection{Acceptance Correction}
 \label{sec:acc corr}
 
-Two detection limitations have been identified: detector coverage (mostly at the edge facing the beam, i.e. relevant for small $|\theta_y^*|$) and LHC apertures ($|\theta_y^*| \sim 100\un{\mu rad}$). The acceptance correction includes two contributions -- a geometrical correction ${\cal A}_{\rm geom}$ reflecting the fraction of the phase space within the acceptance and a component ${\cal A}_{\rm fluct}$ correcting for fluctuations around the acceptance limitations:
+Two detection limitations have been identified: detector coverage (mostly at the edge facing the beam, i.e. relevant for small $|\theta_y^*|$) and LHC apertures ($|\theta_y^*| \sim 100\un{\mu rad}$). The acceptance correction includes two contributions -- a geometrical correction ${\cal A}_{\rm geom}$ reflecting the fraction of the phase space within the acceptance and a component ${\cal A}_{\rm fluct}$ correcting for fluctuations around the acceptance limitations \todo{limitations cuts in y, thus function of $\theta_y^*$}:
 \begin{equation}
 {\cal A}(\theta^*, \theta_y^*) = {\cal A}_{\rm geom}(\theta^*)\ {\cal A}_{\rm fluct}(\theta_y^*)\ .
 \end{equation}
@@ -173,16 +229,41 @@ The correction ${\cal A}_{\rm fluct}$ is calculated analytically from the probab
 \end{equation}
 \fi
 
+
+\begin{figure}
+\begin{center}
+\includegraphics{fig/acc_corr_phi_lab.pdf}
+\vskip-3mm
+\caption{%
+\todo{caption}. The red horizontal lines represent the LHC apertures, the magenta horizontal lines the acceptance limitations due to sensor edges. The upper (lower) part of data comes from the diagonal 45 bottom -- 56 top (45 top -- 56 bottom). \todo{circles/arcs}
+}
+\label{fig:acceptance principle}
+\end{center}
+\end{figure}
+
+
+\begin{figure}
+\begin{center}
+\includegraphics{fig/acc_corr_hists.pdf}
+\vskip-3mm
+\caption{%
+\todo{caption}. DS4, 45b -- 56t, full correction, shows mean value per bin, error bar indicates standard deviation. The data left of the dashed vertical line are discarded due to excessive acceptance correction.
+}
+\label{fig:acceptance result}
+\end{center}
+\end{figure}
+
 %-------------------------
 
 \subsubsection{Inefficiency Corrections}
 \label{sec:ineff corr}
 
-Any inefficiency correction that does not alter the $t$-distribution shape does not need to be considered in this analysis (e.g.~the pile-up inefficiency discussed in \cite{prl111}).
+Any inefficiency correction that does not alter the $t$-distribution shape does not need to be considered in this analysis (e.g.~the pile-up inefficiency discussed in \cite{prl111} \todo{list them all}).
 
-The uncorrelated 1-RP inefficiency ${\cal I}_{3/4}$ is evaluated by removing a given RP from the tagging cuts, Table \ref{tab:cuts}, and calculating the fraction of recovered events. This fraction has been found to depend gently on the vertical scattering angle. The average slope of the decrease per RP is $80\un{rad^{-1}}$ with a typical uncertainty of $8\un{rad^{-1}}$.
+The uncorrelated 1-RP inefficiency ${\cal I}_{3/4}$ is evaluated by removing a given RP from the tagging cuts, Table \ref{tab:cuts}, and calculating the fraction of recovered events. This fraction has been found to depend gently on the vertical scattering angle. The average slope of the decrease per RP is $80\un{rad^{-1}}$ with a typical uncertainty of $8\un{rad^{-1}}$. \todo{call single-RP, explain better}
 
 The 1-RP inefficiencies are complemented by near-far correlated inefficiencies ${\cal I}_{2/4}$ from proton interactions in the near RP affecting also the far one. This contribution is determined by counting events with corresponding shower signatures and is validated with a Monte-Carlo simulation.
+\todo{explain better, ask Valentina, ref to Hubert's thesis}
 
 The full correction is calculated as
 \begin{equation}
@@ -194,18 +275,39 @@ where the first term in parentheses typically grows from about $7$ to $10\un{\%}
 %Trigger efficiency. Zero-bias data stream, events tagged as elastic, look at the trigger flag. NOT IN DS4 !!!
 %For example for DS2, at $95\un{\%}$ CL, ${\cal I}_{\rm trig} < 8\cdot10^{-4}$. Anyway irrelevant.
 
+\begin{figure}
+\begin{center}
+\includegraphics{fig/eff3outof4_details_fits.pdf}
+\vskip-3mm
+\caption{%
+\todo{caption}. RP: 45, 220m, far, top. Left: drop due to acceptance, rest: ``plateau'' with slope
+}
+\label{fig:efficiency}
+\end{center}
+\end{figure}
+
 
 %-------------------------
 
 \subsubsection{Unfolding of Resolution Effects}
 \label{sec:unfolding}
 
-The correction for resolution effects has been determined by the following iterative procedure. The differential cross-section data are fitted by a smooth curve which serves as an input to a Monte-Carlo simulation using the resolution parameters determined in Section~\ref{sec:resolution}. Making a ratio between simulated histograms with and without smearing effects gives a set of per-bin correction factors. Applying them to the yet uncorrected differential cross-section yields a better estimate of the true $t$-distribution which can be used as input to the next iteration. Due to the relatively good angular resolution, the final correction is not large: $|1 - {\cal U}| < 3\un{\%}$.
+The correction for resolution effects has been determined by the following iterative procedure. The differential cross-section data are fitted by a smooth curve which serves as an input to a Monte-Carlo simulation using the resolution parameters determined in Section~\ref{sec:resolution}. Making a ratio between simulated histograms with and without smearing effects gives a set of per-bin correction factors. Applying them to the yet uncorrected differential cross-section yields a better estimate of the actual $t$-distribution which can be used as input to the next iteration. Due to the relatively good angular resolution, the final correction is not large: $|1 - {\cal U}| < 3\un{\%}$.
 
 For the uncertainty estimate, the uncertainties of $\theta_x^*$ and $\theta_y^*$ resolutions (accommodating the full time variation) as well as fit-model dependence have been considered, the first contribution being dominant.
 
 %2 iterations
 
+\begin{figure}
+\begin{center}
+\includegraphics{fig/unfolding_correction_comparison.pdf}
+\vskip-3mm
+\caption{%
+\todo{caption}. Points: Monte-Carlo method, solid lines: analytic calculation.
+}
+\label{fig:unfolding}
+\end{center}
+\end{figure}
 
 %-------------------------
 
@@ -233,6 +335,7 @@ Two binnings have been considered. The ``optimised'' option sets the bin size to
 
 Besides the systematic uncertainties mentioned at the above analysis steps, the uncertainty of the beam momentum, $0.1\un{\%}$, needs to be considered when the scattering angles are translated into $t$, see Eq.~(\ref{eq:th t}). The systematic effects are propagated to the $t$-distribution by inserting the final cross-section into a Monte-Carlo simulation where any analysis parameter can be artificially biased.
 %The results are validated with a semi-analytical calculation eventually exploiting numerical integration.
+ \todo{describe procedure better}
 
 
 
@@ -241,7 +344,7 @@ Besides the systematic uncertainties mentioned at the above analysis steps, the 
 \subsection{Systematic Cross-Checks}
 \label{sec:cross checks}
 
-Compatible results have obtained from data originating from different bunches, different diagonals and different time periods.
+Compatible results have been obtained from data originating from different bunches, different diagonals and different time periods.
 
 %----------------------------------------------------------------------------------------------------
 
@@ -257,59 +360,21 @@ The systematic uncertainties are summarised in Figure~\ref{fig:syst unc} where t
 \end{equation}
 where the $\vec v_i$'s represent the uncertainty vectors (columns) from the table.
 
-\begin{figure*}[t]
+\begin{figure*}
 \begin{center}
-\includegraphics[width=13cm]{fig/direct_method_mode_cmp_presentation.pdf}
+\includegraphics{fig/direct_method_mode_cmp_presentation.pdf}
 \caption{%
-Impact of systematic uncertainties on the differential cross-section. The two contributions due to optics correspond to the two eigenvectors of the covariance matrix of the factors scaling $\theta_x^*$ and $\theta_y^*$ (see Section~\ref{sec:optics}).
+Impact of systematic uncertainties on the differential cross-section. The two contributions due to optics correspond to the two eigenvectors of the covariance matrix of the factors scaling $\theta_x^*$ and $\theta_y^*$ (see Section~\ref{sec:optics}). \todo{explain better the two optics modes}
 }
 \label{fig:syst unc}
 \end{center}
 \end{figure*}
 
-%----------------------------------------------------------------------------------------------------
 
-\subsection{Statistical Uncertainty Adjustment}
-\label{sec:stat unc adj}
-%
-Examining point-to-point fluctuations in the differential cross-section using the optimised binning indicates that the statistical fluctuations have been slightly overestimated. This can be alternatively demonstrated by the following procedure. The data sample is divided into several sub-samples corresponding to the same luminosity and the above-described analysis method is repeated for all of them. Then fluctuations of each bin content are determined from the several sub-samples, giving values slightly lower than the uncertainty estimates. A similar problem does not occur for the per-mille binning.
-%\todo{Interpretation?}.
-As a remedy, the statistical uncertainties in the optimised binning have been divided by factor $1.176$ determined by requiring the same $\chi^2$ as for the per-mille binning when a function with enough degrees of freedom is used (see the green fit in Figure~\ref{fig:data rel ob}).
-
-
-%----------------------------------------------------------------------------------------------------
-\section{Results}
-
-% --- the results drawn from the optimised binning
-
-The final differential cross-section in the optimised binning is presented in Table~\ref{tab:data}. Since it exhibits an exponential-like fall-off, for visualisation purposes, it is preferable to plot the relative difference of the cross-section from a reference exponential, % subtracting the main component
-see Figure~\ref{fig:data rel ob}. This plot immediately suggests a non-exponentiality of the data. To quantify this observation, a series of fits has been made using this parametrisation:
-\begin{equation}
-\label{fit param}
-{\d\sigma\over\d t}(t) = \left. \d\sigma\over\d t\right|_{0} \ \exp\left( \sum\limits_{i = 1}^{N_{b}} b_i\, t^i \right) \:.
-\end{equation}
-The fits have been performed by minimising the standard $\chi^2$ with the covariance matrix given by the sum of the statistical and systematic components. The fit results are shown in Figure~\ref{fig:data rel ob}, clearly indicating that the purely-exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance. The other two fits present very reasonable p-values and can, therefore, be used for a total cross-section estimation with the optical theorem in the form
-\begin{equation}
-\label{eq:si tot}
-\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,
-\end{equation}
-for the first time using a non-exponential extrapolation to $t=0$. Using the COMPETE~\cite{compete} preferred-model extrapolation of $\rho = 0.140\pm 0.007$ yields
-\begin{equation}
-\label{eq:si tot results}
-	\begin{aligned}
-		N_b &= 2:\quad \sigma_{\rm tot} = (100.8 \pm 2.1)\un{mb}\ ,\\	% A = 529.3 +- 21.9
-		N_b &= 3:\quad \sigma_{\rm tot} = (101.2 \pm 2.1)\un{mb}\ ,\\	% A = 533.5 +- 21.9
-	\end{aligned}
-\end{equation}
-which are well compatible with the previous measurement using the luminosity-independent method~\cite{prl111}.
-
-
-
-
-\begin{table*}[t!]
+\begin{table*}
 \caption{%
-The elastic differential cross-section as determined in this analysis using the optimised binning. The three left-most columns describe the bins in $t$. The representative point gives the $t$ value suitable for fitting~\cite{lafferty94}. %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
-The other columns are related to the differential cross-section. The four right-most columns give the leading systematic uncertainty modes (see Section~\ref{sec:final data merging} and Figure~\ref{fig:syst unc}).
+The elastic differential cross-section as determined in this analysis using the ``optimised'' binning. The three left-most columns describe the bins in $t$. The representative point gives the $t$ value suitable for fitting~\cite{lafferty94}. %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
+The other columns are related to the differential cross-section. The four right-most columns give the leading systematic uncertainty modes (see Section~\ref{sec:final data merging} and Figure~\ref{fig:syst unc}). \todo{explain better the 4 columns on the right}
 }
 \label{tab:data}
 \begin{center}
@@ -359,52 +424,12 @@ $0.19005$ & $0.19965$ & $0.19478$ & $\S12.124$ & $0.0585$ & $\S0.517$ & $+\S0.50
 \end{center}
 \end{table*}
 
-% --- results from per-mille binning
+%----------------------------------------------------------------------------------------------------
 
-The incompatibility between a pure exponential behaviour and the data with the per-mille binning can be shown equally well. However, since the number of points is drastically increased, the $\chi^2$ test does not have sufficient sensitivity, and a different test is used. Assuming that the data can be described by a pure exponential, the fit parameters should have compatible values for fits over different ranges. Such fits are shown in Figure~\ref{fig:data rel cpb0.001}, for regions below and above $|t| = 0.07\un{GeV^2}$. Although the overall fit quality is satisfactory, the difference in fit parameters excludes their compatibility at $7.7\un{\sigma}$. This, in turn, rules out the assumption, the hypothesis of a purely exponential behaviour of the data.
-
-\iffalse
-	split details
-                A = 529.299 +- 21.951
-                B1 = -19.678 +- 0.074
-                B2 = 514.681 +- 21.953
-                B3 = -19.264 +- 0.057
-
- A1 − A2 = 14.617 ± 1.789 ⇒ 8.2 σ
- B1 − B2 = −0.414 ± 0.056 ⇒ 7.4 σ
-\fi
-
-
-
-
-
-\begin{figure*}[t]
-\vskip-5mm
-\begin{center}
-\includegraphics[width=\textwidth]{fig/t_dist_rel_with_fits.pdf}
-\vskip-4mm
-\caption{%
-Differential cross-section using the optimised binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The coloured lines correspond to fits with parametrisation Eq.~(\ref{fit param}). The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit.
+\subsection{Statistical Uncertainty Adjustment}
+\label{sec:stat unc adj}
 %
-Various fit-quality measures are given in the legend, starting with the $\chi^2$ value after minimisation divided by the number of degrees of freedom (ndf). P-value: probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Significance: half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value.
-}
-\label{fig:data rel ob}
-\end{center}
-\vskip-2mm
-\end{figure*}
-
-
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=\textwidth]{fig/t_dist_rel_with_split_fit.pdf}
-\vskip-4mm
-\caption{%
-Differential cross-section using the per-mille binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The green line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$.
-}
-\label{fig:data rel cpb0.001}
-\end{center}
-\end{figure*}
-
-
-
+Examining point-to-point fluctuations in the differential cross-section using the ``optimised'' binning indicates that the statistical fluctuations have been slightly overestimated. \todo{explain the preceding argument better}
+This can be alternatively demonstrated by the following procedure. The data sample is divided into several sub-samples corresponding to the same luminosity and the above-described analysis method is repeated for all of them. Then fluctuations of each bin content are determined from the several sub-samples, giving values slightly lower than the uncertainty estimates. A similar problem does not occur for the ``per-mille'' binning.
+%\todo{Interpretation?}.
+As a remedy, the statistical uncertainties in the ``optimised'' binning have been divided by factor $1.176$ determined by requiring the same $\chi^2$ as for the ``per-mille'' binning when a function with enough degrees of freedom is used (see the green fit in Figure~\ref{fig:data rel ob}). \todo{what function? enough dof - for what, how many? }
