added reference to Hubert's thesis
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9859 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -170,6 +170,14 @@ NKTH-OTKA grant 74458 (Hungary).
         Coulomb-Nuclear Interference Region by the TOTEM Experiment at the 
         CERN LHC, this journal.
 
+\bibitem{hubert-thesis}
+	\Name{Niewiadomski H.}
+	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
+    PhD thesis, 
+	%University of Manchester, 2008
+    CERN-THESIS-2008-080 
+	{\tt http://cds.cern.ch/record/1131825}
+
 \iffalse
 
 \bibitem{epl95}
